--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                             <div class="envato_group_main">
                                 <div>
                                     <h3 class="bachelor font_w_font_s1">Associate Software Engineer</h3>
-                                    <h4 class="company font_w_font_s1">Techadlien / 1<sup>st</sup> july 2023 - 10<sup>th</sup> sep 2024</h4>
+                                    <h4 class="company font_w_font_s1">Techadlien Pvt Ltd / 1<sup>st</sup> july 2023 - 10<sup>th</sup> sep 2024</h4>
                                 </div>
                             </div>
                         </div>
@@ -458,7 +458,7 @@
             <ul class="social_media">
                 <li><a href="https://www.linkedin.com/in/lokesh-chellinki-870512225" target="blank">Li</a></li>
                 <li><a href="https://github.com/Lovekesh2806" target="blank">Git</a></li>
-                <li><a href="https://portfolio-psi-kohl-98.vercel.app/" target="blank">website</a></li>
+                <li><a href="https://lokesh-portfolio-self.vercel.app/" target="blank">website</a></li>
             </ul>
         </div> 
 
